creado el menu de ing senior

--- a/web/senior/gestionRequisitos.xhtml
+++ b/web/senior/gestionRequisitos.xhtml
@@ -30,10 +30,10 @@
                     <h:form>
                         <p:menu>
                             <p:submenu label="Menú">
-                                <p:menuitem value="Demo" url="http://www.primefaces.org/showcase-labs/ui/home.jsf" />
-                                <p:menuitem value="Documentation" url="http://www.primefaces.org/documentation.html" />
-                                <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
-                                <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
+                                <p:menuitem value="Colaboraciones" url="../senior/gestionColaboraciones.xhtml"/>
+                                <p:menuitem value="Fases" url="../senior/gestionDesarrollo.xhtml"/>
+                                <p:menuitem value="Requisitos" url="../senior/gestionRequisitos.xhtml"/>
+                                <p:menuitem value="Solicitudes" url="../senior/gestionSolicitudes.xhtml"/>
                             </p:submenu>
                         </p:menu>
                         <p:commandButton value="Cerrar Sesión" action="#{sesionVista.cerrarSesion()}"/>
