ajuste menor al menu de jefe

--- a/web/jefe/gestionIngSeminario.xhtml
+++ b/web/jefe/gestionIngSeminario.xhtml
@@ -13,7 +13,7 @@
             </f:facet>
             <style>
                 .ui-menu {
-                    width: 140px;
+                    width: 160px;
                 }
             </style>
             <script>
@@ -54,7 +54,7 @@
                     SEMINARIOS
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" header="Colapsar" collapsible="true">
+                <p:layoutUnit position="west" size="200" header="Colapsar" collapsible="true">
                     <h:form>
                         <p:menu>
                             <p:submenu label="Menú">
