--- a/web/jefe/gestionIngJefe.xhtml
+++ b/web/jefe/gestionIngJefe.xhtml
@@ -13,7 +13,7 @@
             </f:facet>
             <style>
                 .ui-menu {
-                    width: 140px;
+                    width: 160px;
                 }
             </style>
         </h:head>
@@ -26,7 +26,7 @@
                     INGENIEROS JEFES
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" header="Colapsar" collapsible="true">
+                <p:layoutUnit position="west" size="200" header="Colapsar" collapsible="true">
                     <h:form>
                         <p:menu>
                             <p:submenu label="Menú">
